fix logo on safari

--- a/src/components/hypePage/hero/hero.module.css
+++ b/src/components/hypePage/hero/hero.module.css
@@ -33,6 +33,7 @@
 
 .foundryLogo {
     height: 4rem;
+    width: auto;
 }
 
 .readMoreFoundry {
